compile_output_utf8.txt
cargo :     Checking signapps-it-assets v0.1.0 
(C:\prog\signapps-platform\services\signapps-it-assets)
Au caractère Ligne:1 : 1
+ cargo check -p signapps-it-assets > compile_output.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking si...apps-it-assets) 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error: `SQLX_OFFLINE=true` but there is no cached data for this query, run 
`cargo sqlx prepare` to update the query cache or unset `SQLX_OFFLINE`
  --> services\signapps-it-assets\src\handlers.rs:15:18
   |
15 |       let assets = sqlx::query_as!(
   |  __________________^
16 | |         HardwareAsset,
17 | |         "SELECT * FROM it.hardware ORDER BY created_at DESC"
18 | |     )
   | |_____^
   |
   = note: this error originates in the macro 
`$crate::sqlx_macros::expand_query` which comes from the expansion of the 
macro `sqlx::query_as` (in Nightly builds, run with -Z macro-backtrace for 
more info)

error: `SQLX_OFFLINE=true` but there is no cached data for this query, run 
`cargo sqlx prepare` to update the query cache or unset `SQLX_OFFLINE`
  --> services\signapps-it-assets\src\handlers.rs:30:17
   |
30 |     let asset = sqlx::query_as!(HardwareAsset, "SELECT * FROM it.hardware 
WHERE id = $1", id)
   |                 
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro 
`$crate::sqlx_macros::expand_query` which comes from the expansion of the 
macro `sqlx::query_as` (in Nightly builds, run with -Z macro-backtrace for 
more info)

error: `SQLX_OFFLINE=true` but there is no cached data for this query, run 
`cargo sqlx prepare` to update the query cache or unset `SQLX_OFFLINE`
  --> services\signapps-it-assets\src\handlers.rs:43:17
   |
43 |       let asset = sqlx::query_as!(
   |  _________________^
44 | |         HardwareAsset,
45 | |         r#"
46 | |         INSERT INTO it.hardware (name, type, manufacturer, model, 
serial_number, purchase_date, warranty_expires, location, notes)
...  |
58 | |         payload.notes as Option<String>
59 | |     )
   | |_____^
   |
   = note: this error originates in the macro 
`$crate::sqlx_macros::expand_query` which comes from the expansion of the 
macro `sqlx::query_as` (in Nightly builds, run with -Z macro-backtrace for 
more info)

error[E0432]: unresolved import `signapps_db::DbPool`
 --> services\signapps-it-assets\src\main.rs:3:5
  |
3 | use signapps_db::DbPool;
  |     ^^^^^^^^^^^^^^^^^^^ no `DbPool` in the root

error[E0432]: unresolved import `signapps_db::DbPool`
 --> services\signapps-it-assets\src\handlers.rs:7:5
  |
7 | use signapps_db::DbPool;
  |     ^^^^^^^^^^^^^^^^^^^ no `DbPool` in the root
  |
help: consider importing this unresolved item through its public re-export 
instead
  |
7 - use signapps_db::DbPool;
7 + use crate::DbPool;
  |

error[E0432]: unresolved import `signapps_db::DbPool`
 --> services\signapps-it-assets\src\routes.rs:5:5
  |
5 | use signapps_db::DbPool;
  |     ^^^^^^^^^^^^^^^^^^^ no `DbPool` in the root
  |
help: consider importing this unresolved item through its public re-export 
instead
  |
5 - use signapps_db::DbPool;
5 + use crate::DbPool;
  |

error[E0432]: unresolved import `postgres_types`
 --> services\signapps-it-assets\src\handlers.rs:6:5
  |
6 | use postgres_types::ToSql;
  |     ^^^^^^^^^^^^^^ use of unresolved module or unlinked crate 
`postgres_types`
  |
  = help: if you wanted to use a crate named `postgres_types`, use `cargo add 
postgres_types` to add it to your `Cargo.toml`

warning: unused import: `routing::get`
 --> services\signapps-it-assets\src\main.rs:1:12
  |
1 | use axum::{routing::get, Router};
  |            ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `UpdateHardwareReq`
  --> services\signapps-it-assets\src\handlers.rs:10:55
   |
10 | use crate::models::{CreateHardwareReq, HardwareAsset, UpdateHardwareReq};
   |                                                       ^^^^^^^^^^^^^^^^^

warning: unused import: `post`
 --> services\signapps-it-assets\src\routes.rs:2:20
  |
2 |     routing::{get, post},
  |                    ^^^^

error[E0282]: type annotations needed
  --> services\signapps-it-assets\src\handlers.rs:15:18
   |
15 |       let assets = sqlx::query_as!(
   |  __________________^
16 | |         HardwareAsset,
17 | |         "SELECT * FROM it.hardware ORDER BY created_at DESC"
...  |
20 | |     .await
   | |__________^ cannot infer type

error[E0282]: type annotations needed
  --> services\signapps-it-assets\src\handlers.rs:21:15
   |
21 |     .map_err(|e| (StatusCode::INTERNAL_SERVER_ERROR, e.to_string()))?;
   |               ^                                      - type must be known 
at this point
   |
help: consider giving this closure parameter an explicit type
   |
21 |     .map_err(|e: /* Type */| (StatusCode::INTERNAL_SERVER_ERROR, 
e.to_string()))?;
   |                ++++++++++++

error[E0282]: type annotations needed
  --> services\signapps-it-assets\src\handlers.rs:30:17
   |
30 |       let asset = sqlx::query_as!(HardwareAsset, "SELECT * FROM 
it.hardware WHERE id = $1", id)
   |  _________________^
31 | |         .fetch_optional(&pool)
32 | |         .await
   | |______________^ cannot infer type

error[E0282]: type annotations needed
  --> services\signapps-it-assets\src\handlers.rs:33:19
   |
33 |         .map_err(|e| (StatusCode::INTERNAL_SERVER_ERROR, e.to_string()))?
   |                   ^                                      - type must be 
known at this point
   |
help: consider giving this closure parameter an explicit type
   |
33 |         .map_err(|e: /* Type */| (StatusCode::INTERNAL_SERVER_ERROR, 
e.to_string()))?
   |                    ++++++++++++

error[E0282]: type annotations needed
  --> services\signapps-it-assets\src\handlers.rs:43:17
   |
43 |       let asset = sqlx::query_as!(
   |  _________________^
44 | |         HardwareAsset,
45 | |         r#"
46 | |         INSERT INTO it.hardware (name, type, manufacturer, model, 
serial_number, purchase_date, warranty_expires, location, notes)
...  |
60 | |     .fetch_one(&pool)
61 | |     .await
   | |__________^ cannot infer type

error[E0282]: type annotations needed
  --> services\signapps-it-assets\src\handlers.rs:62:15
   |
62 |     .map_err(|e| (StatusCode::INTERNAL_SERVER_ERROR, e.to_string()))?;
   |               ^                                      - type must be known 
at this point
   |
help: consider giving this closure parameter an explicit type
   |
62 |     .map_err(|e: /* Type */| (StatusCode::INTERNAL_SERVER_ERROR, 
e.to_string()))?;
   |                ++++++++++++

error[E0599]: no function or associated item named `from_env` found for struct 
`AppConfig` in the current scope
   --> services\signapps-it-assets\src\main.rs:26:29
    |
 26 |     let config = AppConfig::from_env()?;
    |                             ^^^^^^^^ function or associated item not 
found in `AppConfig`
    |
note: if you're trying to build a new `AppConfig`, consider using 
`AppConfig::load` which returns `Result<AppConfig, config::error::ConfigError>`
   --> C:\prog\signapps-platform\crates\signapps-common\src\config.rs:104:5
    |
104 |     pub fn load() -> Result<Self, config::ConfigError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there is an associated function `from` with a similar name
   --> C:\Users\etien\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rust
lib/src/rust\library\core\src\convert\mod.rs:592:5
    |
592 |     fn from(value: T) -> Self;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0282, E0432, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `signapps-it-assets` (bin "signapps-it-assets") generated 3 warnings
error: could not compile `signapps-it-assets` (bin "signapps-it-assets") due 
to 14 previous errors; 3 warnings emitted
